fix: css: query: hide time on mobile

--- a/css/query.css
+++ b/css/query.css
@@ -161,8 +161,9 @@
     .size,
     .date,
     .owner,
+    .time,
     .mode {
-        display: none;
+        display: none !important;
     }
     
     .name {
